<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tatva 2016</string>
    <string name="action_about">About</string>
    <string name="fab_transition">fab_maps</string>
    <string name="title_activity_event"> </string>
    <string name="title_activity_maps"> </string>
    <string name="copyrights">The \"Tatva\" Logo in this Application belongs to B.N.M. Institute of Technology and shall not be copied or used in any other context. </string>
    <string name="dev_subtext">Designer and Developer.</string>
    <string name="dev_text">Aakaash Jois</string>
    <string name="google_play">Google Play</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="event_poster">Event Poster</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="team_members">Team Members</string>
    <string name="first_prize">First Prize</string>
    <string name="organizer">Organizer</string>
    <string name="contact_organizer">Contact Organizer</string>
    <string name="second_prize">Second Prize</string>
    <string name="search">Search</string>
    <string name="techDCname">Tech DC</string>
    <string name="technogenName">Technogen</string>
    <string name="CircuitDebuggingName">Circuit Debugging</string>
    <string name="CorCongName">Corporate Conglomerate</string>
    <string name="mockStockName">Mock Stock (Intra)</string>
    <string name="treasureHuntName">Treasure Hunt (Intra)</string>
    <string name="techJAMName">Tech JAM</string>
    <string name="techTalkName">Tech Talk</string>
    <string name="gamingNFSName">Gaming - NFS</string>
    <string name="gamingCSName">Gaming - CS</string>
    <string name="gamingCODName">Gaming - COD</string>
    <string name="mockGREName">Mock GRE/CAT</string>
    <string name="patternPrintName">Pattern Print</string>
    <string name="eeTM2Name">E=TM²</string>
    <string name="essenceName">Essence</string>
    <string name="kartItName">Kart-it</string>
    <string name="codingName">Coding</string>
    <string name="potporriName">Potpourri</string>
    <string name="cryptORigName">Crypt-O-Rig</string>
    <string name="googleItName">Google-it</string>
    <string name="chuckGliderName">Chuck Glider</string>
    <string name="photographyName">Photography</string>
    <string name="hireFireName">Hire/Fire</string>
    <string name="rubiksCubeName">Cube On 2016</string>
    <string name="trdplName">The Raghu Dixit Project Live</string>
    <string name="bbRoyName">BB Roy</string>
    <string name="hogathonName">Hogathon</string>
    <string name="gamingConsoleName">Gaming - FIFA</string>
    <string name="techDCDesc">Dumb charades with a twist! Get your team members to guess words you use everyday in your classrooms and labs - and more!</string>
    <string name="technogenDesc"><![CDATA[A Quiz that will test your IT & General Knowledge trivia thoroughly. With innovative rounds, we promise to make this a technical quiz unlike any other. Will be held in two rounds – written Prelims and a final. 6 teams will make it to the finals from the prelims.]]></string>
    <string name="circuitDebugDesc">Become the “ter-bug-ator” ! This is an opportunity to showcase your circuit debugging skills by fixing simple bugs in a circuit, thus tweaking your way to victory. It\'s time to brush up on your electronics skills, because the event will have basic and easy rounds that will not require you to scratch that pretty brain of yours!</string>
    <string name="CorpCongDesc">"A collaboration between David and Goliath! CC is a one-of-a-kind event providing a very realistic idea of how the corporate world works. Teams are divided into councils and assigned with companies accordingly. Giants and Start-ups need to form a symbiotic collaboration, bring out a product and present it.The final round will require the selected teams to face a jury which will decide the ultimate winner. "</string>
    <string name="mockStockDesc">Are you the Wolf of Wall Street? We\'ve got here an event that tries to emulate a stock market with real time fluctuations in the stock price and news relating to the company. The original companies that we\'ve created and the companies’ details will be given to the contestants on the day of the event.</string>
    <string name="treasureHuntDesc" tools:ignore="Typos">Captain Jack Sparrow, The Famous Five, Indiana Jones and Robert Langdon all have one thing in common - an uncommon curiosity for hidden treasures! If you\'re the kind that likes solving clues and finding Easter Eggs (wink wink!) and if you think you know BNMIT well enough (or don\'t) you should totally take part in this Around-the-campus-in-60-minutes Amazing Race, crafted exclusively for BNM students!</string>
    <string name="techTalkDesc">A talk to remember. Participants would be given a published paper in a domain of their choice - EC, CS or Mechanical - a few days before the event and they would have to prepare for it and present it. Basically, participants would be presenting published papers, unless they have published papers of their own, in which case we would be more than happy to let them present it!</string>
    <string name="techJAMDesc">For people who can rant about Android L and the likes! A panel game in which the contestants are challenged to speak for one minute without hesitation, deviation or repetition of any subject that comes up. The final round is Air Crash, in which contestants will be assigned fun sci-fi characters and will be given their details, and participants would have to justify their survival.</string>
    <string name="gamingPCDesc">One of the most exciting events of Tatva! The rush of adrenaline and the nail-biting finishes make this one of the most anticipated events. We have classic PC games like Call of Duty, Counter Strike and Need for Speed. Come one, Come all.</string>
    <string name="mockGREDesc">Planning to chase your dreams? Come take a step forward and give these challenging exams a shot to know where you stand! Tag your friends along to make it more competitive! Exciting cash prizes await the winners!</string>
    <string name="patternPrintDesc">Print away! Teams will have to create a HackerRank profile. They will be provided with a set of patterns which they have to code in any language of their choice to obtain that pattern as the output.</string>
    <string name="eeTM2Desc" tools:ignore="Typos">An Entertainment Quiz. TV shows, music and movies. By this, we solemly swear that we\'re upto no good. Why? Cause this is like a box of chocolates. You never know what you\'re gonna get. For this is our design. So you\'d better kick your can all over the place.</string>
    <string name="essenceDesc">Petrol Heads Unite! This is a quiz about all things fast with four wheels. Test your speed and handling with 2 rounds - Prelims and a finals consisting of 6 teams.</string>
    <string name="kartItDesc">Want it? KART IT! The participants will be given a set of product images from an e-commerce website. They will have to search for the product on Flipkart using the image given as reference.</string>
    <string name="codingDesc">Attention Coders! Here\'s a chance for you to test your skills! The first round,has 30 questions to be answered. The second round will have problem statements for which teams have to code to solve it. You can code in any language, as long as you get an output!</string>
    <string name="potpourriDesc">Dumb Charades, Pictionary and everything else that you do to pass time - think you\'re good at it? Think you can name famous movies and TV Shows and personalities off the top of your head? Then why don\'t you make some money out of it? Tag your friends along and register for a super fun event!</string>
    <string name="cryptORigDesc">Sherlock Holmes or Hercule Poirot - is one of them your detective heroes? Do you find it amusing to solve perplexing mysteries? If your answer is yes, sign up for Crypt-o-rig, a mind boggling event (literally!) where participants are required to solve the black box mystery and they, in turn win a clue to the final round with their detective skills. Only, here, it\'s an exciting walk through circuits and codes!</string>
    <string name="googleItDesc">Are you good at googling stuff? Then this is the right event for you! You\'ll be given an image of a webpage, and you need to find the exact URL of the webpage by using the clues in the image. The team which gets the maximum URLs right out of 15 such questions, will be declared the winner.</string>
    <string name="chuckGliderDesc">Remember those days where you built your own kite and flew it high or letting paper boats into flowing water. Let\'s take that feeling to the next level in Chuck glider. A bit of engineering but lots of fun. You don\'t need to have any special skills. All you need is a bunch of friends, lots of enthusiasm and of course the ticket. Learn, build and fly a Chuck glider at TATVA 2016. Limited tickets available. Buy them soon.</string>
    <string name="photographyDesc">Make a statement without saying a word! The participants will be given a topic on the day of the event and they will have to click a picture using DSLR/Digital camera and submit within 6 hours. No post processing will be allowed.</string>
    <string name="hireFireDesc">Clearing interviews has never been easy - but we\'ll make it slightly easier for you! In Hire or Fire, participants will undergo a group discussion round and will have to clear it, following which they will face judges in the Personal Interview round.</string>
    <string name="rubiksCubeDesc">Cube On 2016, the first ever speed cubing event in Tatva 2016, with WCA recognition. Cubers from all over the country are welcome to showcase their speed cubing skills at this breathtaking event. Age is never a limitation to challenge the world of cubers here. If you\'re one of those cubers who can solve the Rubik\'s Cube with ease and are willing to prove your talent by competing with the best cubers in India then join us at Cube On 2016.</string>
    <string name="bbRoyDesc">An event for the Sherlock \"Ohms\"! There are two kinds of resistors - BBROY of Great Britain had a Very Good Wife or BBROY Goes to Bombay Via Gate Way! Whichever side you\'re on, you\'d better stick to it because BBROY is the guy helping you out in the two rounds of this resistor-filled contest!</string>
    <string name="trdplDesc">We present to you, a man who, along with his band, has performed and enthralled audiences not just in Bengaluru, not just in India, but all across the world! Yes, he\'s the man who has mesmerized us with songs like ‘Munjaane manjalli’ and ‘Gudugudiya’. We\'re talking about inimitable, nammellara acchu mecchina RAGHU DIXIT! And we’re just so, so proud to be making this announcement. Make sure you have your seat reserved, because nothing can be more gratifying than having The Raghu Dixit Project perform to a packed auditorium. It\'s all happening at TATVA 2016! We did say we’re making this Tatva better than ever, didn’t we? See you all there!</string>
    <string name="hogathonDesc">Eat! Consume! Gobble! Devour! Smack! Crunch! Yum! Gollop! Guzzle! Gulp! Do we need add more? If you\'ve got an appetite that can overtake the food we have on offer, we challenge you to prove it! Come on, you can\'t say no to food!</string>
    <string name="gamingConsoleDesc">For the first time ever, BNMIT plays host to console wars! Get ready to play one of the most exciting games on the PlayStation - FIFA 16! You think you can keep up?</string>
    <string name="technogenDay">26th February, 2016</string>
</resources>