<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.biryanistudio.tatvaapp.AboutActivity"
    tools:ignore="Overdraw">


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tatvaLogoImageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/app_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin">

                <ImageButton
                    android:id="@+id/phoneButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#2848D8"
                    android:contentDescription="@string/phone"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/handset" />

                <ImageButton
                    android:id="@+id/facebookButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#3b5998"
                    android:clickable="true"
                    android:contentDescription="@string/facebook"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/facebook" />

                <ImageButton
                    android:id="@+id/instagramButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#3f729b"
                    android:contentDescription="@string/instagram"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/instagram" />

                <ImageButton
                    android:id="@+id/webButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#00a0df"
                    android:contentDescription="@string/website"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/website" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="#699F19"
                    android:contentDescription="@string/google_play"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyrights" />

            <LinearLayout
                android:id="@+id/appDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_horizontal_margin">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/dev_text"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dev_subtext"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textStyle="italic" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/appDevImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:civ_border_color="@android:color/black"
                    app:civ_border_width="2dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
