<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.biryanistudio.tatvaapp.EventActivity"
    tools:showIn="@layout/activity_event">

    <LinearLayout
        android:id="@+id/cardViewHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/eventCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/date"
                        android:src='@drawable/calendar' />

                    <TextView
                        android:id="@+id/eventDay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/time"
                        android:src="@drawable/timer" />

                    <TextView
                        android:id="@+id/eventTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/location"
                        android:src="@drawable/map_marker" />

                    <TextView
                        android:id="@+id/eventLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/description"
                        android:src="@drawable/file_document_box" />

                    <TextView
                        android:id="@+id/eventDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/eventRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/ticket_price"
                        android:src="@drawable/cash_multiple" />

                    <TextView
                        android:id="@+id/eventTicketRate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/eventTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/team_members"
                        android:src="@drawable/account_multiple" />

                    <TextView
                        android:id="@+id/eventTeamMembers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <LinearLayout
                        android:id="@+id/layoutFirstPrize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:contentDescription="@string/first_prize"
                            android:src="@drawable/star"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/eventFirstPrize"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutSecondPrize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:contentDescription="@string/second_prize"
                            android:src="@drawable/star_half"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/eventSecondPrize"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/organizer1Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/organizer"
                        android:src="@drawable/account" />

                    <TextView
                        android:id="@+id/eventOrganizer1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <ImageButton
                        android:id="@+id/eventPhone1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/contact_organizer"
                        android:src="@drawable/phone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/organizer2Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/organizer"
                        android:src="@drawable/account" />

                    <TextView
                        android:id="@+id/eventOrganizer2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <ImageButton
                        android:id="@+id/eventPhone2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/contact_organizer"
                        android:src="@drawable/phone" />
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
